# mcpgulator

./: .gitignore  README.md  pyproject.toml
config/: jtagulator_commands.yaml
src/mcpgulator/: __main__.py  config.py  discovery.py  navigator.py  serial_conn.py  server.py
